ajustes nos posicionamentos e estilização

--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
     <main>
         <section class="container">
             <div class="area_texto_normal">
-                <textarea name="texto_a_encriptar" id="" cols="30" rows="15"></textarea>
+                <textarea name="texto_a_encriptar" id="" cols="30" rows="20" class="text_area"
+                    placeholder="Digite aqui seu texto para encripitar ou desencripitar"></textarea>
                 <p class="info">Apenas letras minúsculas e sem acento.</p>
-               <div class="botoes">
-                <button class="btn_cript">Criptografar</button>
-                <button class="btn_decript">Descriptografar</button>
-               </div>
+                <div class="botoes">
+                    <button class="btn_cript">Criptografar</button>
+                    <button class="btn_decript">Descriptografar</button>
+                </div>
             </div>
             <div class="area_texto_encripitado">
-                <textarea name="texto_encriptado" id="" cols="30" rows="20">
+                <textarea name="texto_encriptado" id="" cols="30" rows="20" class="text_area">
                 </textarea>
-                <div class="img_encript"><img src="" alt="imagem"></div>
+                <img src="./assets/images/padlock.jpg" alt="imagem" class="img_encript">
                 <button class="btn_cop">Copiar</button>
             </div>
         </section>
