Update footer e screenshoot

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </section>
     </main>
-    <footer>Aqui é o footer</footer>
+    <footer>Challenge Oracle + Alura feito por Thiago Mendes</footer>
 </body>
 
 <script src="./assets/js/script.js"></script>
