Inserido as redes sociais no footer

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
             </div>
         </section>
     </main>
-    <footer>Challenge Oracle + Alura feito por Thiago Mendes</footer>
+    <footer>Challenge Oracle + Alura feito por Thiago Mendes 
+        <a href="https://github.com/thiagotmdev" target="_blank"><img src="./assets/icones/github.png" alt="" srcset=""></a>
+        <a href="https://www.linkedin.com/in/thiago-mendes-43534010b/" target="_blank"><img src="./assets/icones/linkedin.png" alt="" srcset=""></a>
+    </footer>
 </body>
 
 <script src="./assets/js/script.js"></script>
